--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
     <string name="title_settings">Settings</string>
+    <string name="movie_page_name">Movie</string>
+
     <string name="default_title">Movie title loading</string>
     <string name="default_grade">-- %</string>
 </resources>
